--- a/app/assets/stylesheets/login.css
+++ b/app/assets/stylesheets/login.css
@@ -1,8 +1,6 @@
 
-
 .login{
-  padding: 100px 0 100px;
-
+  padding: 0 0 50px;
 }
 
 .login__inner{
@@ -14,5 +12,5 @@
   color: #000;
   font-size: 30px;
   text-align: center;
-  margin-bottom: 40px;
+  margin: 40px 0 40px;
 }
