--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,9 @@
   </head>
 
   <body>
+    <%= render "shared/flash_messages" %>
     <%= render 'layouts/header' %>
     <%= yield %>
+   <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
