--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,8 @@
 <div id="signup" class="signup">
+  <%= render "shared/error_messages", object: @user %>
   <h1 class="signup__title">新規登録</h1>
-  <div class="signup__inner">
-    <%= form_with url: users_path do |f| %>
+    <div class="signup__inner">
+    <%= form_with model: @user, url: signup_path do |f| %>
        <div class="form-outline">
         <%= f.text_field :username , class:"form-control" %>
         <%= f.label :username, "username", class: "form-label" %>
