style: erblint --lint-all -a

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,12 +19,12 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.11.0/mdb.min.css"
       rel="stylesheet">
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag 'application', 'data-turbo-track': 'reload' %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
-    <%= render "shared/flash_messages" %>
+    <%= render 'shared/flash_messages' %>
     <%= render 'layouts/header' %>
     <%= yield %>
    <%= debug(params) if Rails.env.development? %>
