--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,7 +22,7 @@
             </ul>
           </li>
         <% else %>
-          <li class="nav-item dropdown">
+          <li class="nav-item dropdown me-3">
             <%= link_to 'Login', :login, class: 'nav-link' %>
           </li>
           <li class="nav-item dropdown">
