--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <div id="signup" class="signup">
   <%= render 'shared/error_messages', object: @user %>
-  <h1 class="signup__title">新規登録</h1>
+  <h1 class="signup__title">ユーザー新規登録</h1>
     <div class="signup__inner">
     <%= form_with model: @user, url: signup_path do |f| %>
        <div class="form-outline">
