--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,13 @@
 <div id="posts" class="posts">
   <div class="container">
     <div class="row">
+      <div class="d-flex justify-content-center mb-2">
+        <%== pagy_bootstrap_nav(@pagy) %>
+      </div>
       <%= render @posts %>
+      <div class="d-flex justify-content-center mb-2">
+        <%== pagy_bootstrap_nav(@pagy) %>
+      </div>
     </div>
   </div>
 </div>
