--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -40,7 +40,11 @@
               </p>
             </div>
           <% end %>
-        <%= render "posts/comment" %>
+          
+          <ul id="comments" class="list-group list-group-light" style="max-height:450px; overflow-y:scroll;">
+            <%= render partial:"posts/comments/comment", collection:@comments %>
+          </ul>
+          <%= render partial:"posts/comments/form", locals:{post: @post, comment: @comment} %>
       </div>
     </div>
     <div class="text-center my-5">
