--- a/app/views/posts/comments/_form.html.erb
+++ b/app/views/posts/comments/_form.html.erb
@@ -4,11 +4,11 @@
 
       <div class="d-flex align-items-center gap-3">
         <div class="form-outline">
-          <%= f.text_area :body, class: "form-control" %>
-          <%= f.label :body, class: "form-label" %>
+          <%= f.text_area :body, class: 'form-control' %>
+          <%= f.label :body, class: 'form-label' %>
         </div>
         <div>
-          <%= f.submit class: "btn btn-primary" %>
+          <%= f.submit class: 'btn btn-primary' %>
         </div>
       </div>
   <% end %>
