modify: いいねボタン 途中

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -32,11 +32,14 @@
           <% if current_user&.owner?(@post) %>
             <div class="d-flex">
               <p class="me-2"><%= link_to 'edit', edit_post_path(@post), { role: 'button', class: 'btn btn-info' } %></p>
-              <p><%= link_to 'delete', post_path(@post), {
+              <p class="me-4"><%= link_to 'delete', post_path(@post), {
                        role: 'button',
                        class: 'btn btn-danger',
                        data: { turbo_method: :delete, turbo_confirm: '削除しますか？' }
                      } %>
+              </p>
+              <p>
+                <%= render "posts/likes/button", post:@post %>
               </p>
             </div>
           <% end %>
