--- a/app/views/posts/likes/_button.html.erb
+++ b/app/views/posts/likes/_button.html.erb
@@ -1,11 +1,13 @@
 <% if logged_in? %>
-  <% if current_user.like?(post) %>
-    <a href="#" style="color:#f00;">
-      <i class="fas fa-heart"></i>
-    </a>
-  <% else %>
-    <a href="#" style="color:#f00;">
-      <i class="far fa-heart"></i>
-    </a>
+  <%= turbo_frame_tag dom_id(post, 'like') do %>
+    <% if current_user.like?(post) %>
+      <%= link_to post_like_path(post), data: { turbo_method: :delete }, class: 'btn-unlike' do %>
+        <i class="fas fa-heart"></i>
+      <% end %>
+    <% else %>
+      <%= link_to post_like_path(post), data: { turbo_method: :post }, class: 'btn-like' do %>
+        <i class="far fa-heart"></i>
+      <% end %>
+    <% end %>
   <% end %>
 <% end %>
