--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -12,7 +12,7 @@
     <hr class="hr">
     <div class="p-3">
       <p>
-        <%= render "posts/likes/button", post: %>
+        <%= render 'posts/likes/button', post: %>
       </p>
       <p>
         <%= post.user.username %>
