--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,7 +14,7 @@
           <div class="p-3">
             <p><%= l @post.created_at %></p>
               <p>
-                <%= render "posts/likes/button", post:@post %>
+                <%= render 'posts/likes/button', post: @post %>
               </p>
           </div>
         </div>
@@ -36,10 +36,10 @@
             <div class="d-flex">
               <p class="me-2"><%= link_to 'edit', edit_post_path(@post), { role: 'button', class: 'btn btn-info' } %></p>
               <p class="me-4"><%= link_to 'delete', post_path(@post), {
-                       role: 'button',
-                       class: 'btn btn-danger',
-                       data: { turbo_method: :delete, turbo_confirm: '削除しますか？' }
-                     } %>
+                                    role: 'button',
+                                    class: 'btn btn-danger',
+                                    data: { turbo_method: :delete, turbo_confirm: '削除しますか？' }
+                                  } %>
               </p>
             </div>
           <% end %>
