modify: userのサムネイルにusernameを追加

--- a/app/views/posts/comments/_comment.html.erb
+++ b/app/views/posts/comments/_comment.html.erb
@@ -1,8 +1,8 @@
 <%= turbo_frame_tag dom_id comment do %>
   <li class="list-group-item d-flex mb-2">
     <div class="d-flex align-items-center" style="width:100%;">
-      <img src="https://mdbootstrap.com/img/new/avatars/7.jpg" class="rounded-circle" alt=""
-                style="width: 45px; height: 45px">
+      <img src="https://placehold.jp/40/3d4070/ffffff/150x150.png?text=<%= comment.user.username %>" class="rounded-circle" alt=""
+                  style="width: 45px; height: 45px">
       <div class="ms-3" style="flex:1;">
         <p class="fw-bold mb-1"><%= comment.user.username %></p>
         <p class="text-muted mb-0" style="font-size:12px;"><%= simple_format(comment.body) %></p>
