--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -23,7 +23,7 @@
           <ul class="list-group list-group-light">
             <li class="list-group-item d-flex justify-content-between align-items-center">
               <div class="d-flex align-items-center">
-                <img src="https://mdbootstrap.com/img/new/avatars/7.jpg" class="rounded-circle" alt=""
+                <img src="https://placehold.jp/40/3d4070/ffffff/150x150.png?text=<%= @post.user.username %>" class="rounded-circle" alt=""
                   style="width: 45px; height: 45px">
                 <div class="ms-3">
                   <p class="fw-bold mb-1"><%= @post.user.username %></p>
