modify: ぱんくずを修正

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -42,11 +42,9 @@
     <!-- Breadcrumb -->
     <nav class="d-flex">
       <h6 class="mb-0">
-        <a href="" class="text-reset">Home</a>
+        <a href="/" class="text-reset">Home</a>
         <span>/</span>
         <a href="" class="text-reset">Analytics</a>
-        <span>/</span>
-        <a href="" class="text-reset"><u>Dashboard</u></a>
       </h6>
     </nav>
     <!-- Breadcrumb -->
