--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
     <%= render 'shared/flash_messages' %>
     <%= render 'layouts/header' %>
     <%= yield %>
-   <%= debug(params) if Rails.env.development? %>
+    <%= render 'shared/search_modal' %>
+    <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
