--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,4 @@
-<div class="col col-6 mb-4 align-self-start">
+<div class="post-child col col-6 mb-4 align-self-start">
   <div class="border rounded">
     <div class="p-3">
       <%= link_to post do %>
