add: ユーザー詳細ページを実装

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,7 +2,7 @@
   <div class="border rounded">
     <div class="p-3">
       <%= link_to post do %>
-        <%= render partial: 'carousel', locals: { post: } %>
+        <%= render partial: 'posts/carousel', locals: { post: } %>
       <% end %>
     </div>
     <hr class="hr">
