--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -26,7 +26,11 @@
                 <img src="https://placehold.jp/40/3d4070/ffffff/150x150.png?text=<%= @post.user.username %>" class="rounded-circle" alt=""
                   style="width: 45px; height: 45px">
                 <div class="ms-3">
-                  <p class="fw-bold mb-1"><%= @post.user.username %></p>
+                  <p class="fw-bold mb-1">
+                    <%= link_to @post.user, data: { turbo: false } do %>
+                      <%= @post.user.username %>
+                    <% end %>
+                  </p>
                 </div>
               </div>
             </li>
