--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
       <div class="row">
         <h1><%= @user.username %></h1>
         <ul class="row">
-         <%= render partial: "posts/post_thumbnail", collection: @posts, as: :post %>        
+         <%= render partial: 'posts/post_thumbnail', collection: @posts, as: :post %>
         </ul>
       </div>
       <div class="d-flex justify-content-center mb-2">
