--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,7 +13,7 @@
     </div>
     <div class="col-4 gap-1 mt-5">
       <div class="mb-3">
-        <%= render User.recent(5) %>
+        <%= render @users %>
       </div>
       <p class="d-flex justify-content-center">
         <%= link_to 'more', users_path, class: 'btn btn-primary' %>
