--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -23,7 +23,7 @@
           <ul class="list-group list-group-light">
             <li class="list-group-item d-flex justify-content-between align-items-center">
               <div class="d-flex align-items-center">
-                <%= render "users/avatar", user:@post.user %>
+                <%= render 'users/avatar', user: @post.user %>
                 <div class="ms-3">
                   <p class="fw-bold mb-1">
                     <%= link_to @post.user, data: { turbo: false } do %>
