--- a/app/views/users/_avatar.html.erb
+++ b/app/views/users/_avatar.html.erb
@@ -1,3 +1,3 @@
 <% if user %>
-  <%= image_tag user.decorate.avatar_url(:thumb), alt:"", style:"width: 45px; height: 45px", class:"rounded-circle" %>
+  <%= image_tag user.decorate.avatar_url(:thumb), alt: '', style: 'width: 45px; height: 45px', class: 'rounded-circle' %>
 <% end %>
