--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,6 @@
 <li class="list-group-item d-flex justify-content-between align-items-center">
   <div class="d-flex align-items-center">
-    <%= render 'users/avatar', user:user %>
+    <%= render 'users/avatar', user: %>
     <div class="ms-3">
       <p class="fw-bold mb-1">
         <%= link_to user.username, user %>
